fixed some spacing on images for desktop

--- a/css/containers.css
+++ b/css/containers.css
@@ -1,6 +1,7 @@
 .content-wrapper {
   overflow: hidden;
   width: 100vw;
+  height: 100vh;
   display: grid;
     grid-template-columns: repeat(13, 1fr);
     grid-template-rows: repeat(6, 1fr);
